# voice-agent-prototype

./: .cursorrules  .env.example  .gitignore  README.md  changelog.md  pyproject.toml
.cursor/rules/: documentation-standards.mdc  openai-agents.mdc  python-practices.mdc  rules-creation.mdc  testing-practices.mdc  uv-command-practices.mdc  uv-practices.mdc  voice-pipeline.mdc
demo/: text_demo.py  tool_calls_demo.py  voice_agent_demo.py  voice_interface_demo.py
docs/: architecture.md
src/agent/: __init__.py  tools.py
src/voice_agent/: text.py
src/voice_agent/agent/: __init__.py  core.py  models.py  tools.py
src/voice_agent/utils/: config.py
src/voice_agent/voice/: __init__.py  interface.py
tests/: test_config.py
tests/unit/: test_agent_core.py  test_text_processor.py  test_tools.py  test_voice_agent_models.py  test_voice_agent_tools.py  test_voice_interface.py
